# nomad-parser-abacus-plugin

./: nomad_plugin.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: actions.yaml
abacusparser/: parser.py
abacusparser/schema/: abacus.py
tests/: test_abacusparser.py
